login page completed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="my-20">
             <h2 class="text-center text-3xl font-bold text-gray-400">Login window</h2>
             <p class="text-center text-lg text-gray-400">Please enter your email and password and then click the login
-                button.</p>
+                button. Thanks!</p>
         </section>
         <!-- login form -->
         <section class="w-1/2 mx-auto my-44 bg-gray-200 p-12 rounded-lg shadow-xl">
