--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         </section>
         <!-- login form -->
         <section class="w-1/2 mx-auto my-44 bg-gray-200 p-12 rounded-lg shadow-xl">
-            <form>
                 <div class="mb-4">
                     <label class="block text-emerald-400 text-lg font-bold mb-2" for="email">
                         Email
@@ -44,11 +43,10 @@
                 <div class="flex items-center justify-between">
                     <button
                         class="bg-emerald-400 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        type="submit">
+                        type="submit" id="login-btn">
                         Sign In
                     </button>
                 </div>
-            </form>
         </section>
         <!-- footer -->
         <footer class="bg-gray-200 py-4">
