--- a/banking.html
+++ b/banking.html
@@ -1,15 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <link href="/dist/output.css" rel="stylesheet">
+    <title>Qk Bank</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="images/bank.jpg" type="image/x-icon">
 </head>
+
 <body>
     <main>
-        <section>
-            <h1>Dashboard</h1>
+        <!-- header with title -->
+        <section class="bg-gray-200 py-8 rounded-lg shadow-xl">
+            <h1 class="text-4xl text-center text-emerald-400 font-bold">Welcome to QK Bank ltd.</h1>
         </section>
+        <section class="my-20">
+            <h2 class="text-center text-3xl font-bold text-gray-400">Hello dear, Welcome to your deshboard!</h2>
+            <p class="text-center text-lg text-gray-400">You are succesfully reached your bank account dashboard. Happy banking Thanks for using QK bank ltd.</p>
+        </section>
+        <!-- login form -->
+        <section class="w-1/2 mx-auto my-44 bg-gray-200 p-12 rounded-lg shadow-xl">
+            <div class="mb-4">
+                <label class="block text-emerald-400 text-lg font-bold mb-2" for="email">
+                    Email
+                </label>
+                <input
+                    class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="email" type="email" placeholder="Enter your email" required>
+            </div>
+            <div class="mb-6">
+                <label class="block text-emerald-400 text-lg font-bold mb-2" for="password">
+                    Password
+                </label>
+                <input
+                    class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                    id="password" type="password" placeholder="Enter your password" required>
+            </div>
+            <div class="flex items-center justify-between">
+                <button
+                    class="bg-emerald-400 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                    type="submit" id="login-btn">
+                    Sign In
+                </button>
+            </div>
+        </section>
+        <!-- footer -->
+        <footer class="bg-gray-200 py-4">
+            <div class="container mx-auto flex items-center justify-center my-3">
+                <p class="text-gray-700">© 2023 My Website. All rights reserved.</p>
+            </div>
+        </footer>
     </main>
+    <script src="js/utilities.js"></script>
+    <script src="js/deposit.js"></script>
+    <script src="js/withdraw.js"></script>
 </body>
+
 </html>
