--- a/banking.html
+++ b/banking.html
@@ -19,40 +19,51 @@
         </section>
         <section class="my-20">
             <h2 class="text-center text-3xl font-bold text-gray-400">Hello dear, Welcome to your deshboard!</h2>
-            <p class="text-center text-lg text-gray-400">You are succesfully reached your bank account dashboard. Happy banking Thanks for using QK bank ltd.</p>
+            <p class="text-center text-lg text-gray-400">You are succesfully reached your bank account dashboard. Happy
+                banking Thanks for using QK bank ltd.</p>
         </section>
-        <!-- login form -->
-        <section class="w-1/2 mx-auto my-44 bg-gray-200 p-12 rounded-lg shadow-xl">
-            <div class="mb-4">
-                <label class="block text-emerald-400 text-lg font-bold mb-2" for="email">
-                    Email
-                </label>
-                <input
-                    class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="email" type="email" placeholder="Enter your email" required>
+        <!-- deposit, withdraw and total balance count bar -->
+        <sections>
+            <div class="grid grid-cols-3 gap-4 mx-auto w-3/4">
+                <div class="bg-emerald-400 w-72 rounded-lg p-12">
+                    <h1 class="text-xl text-white text-center">Deposit Amount</h1>
+                    <p class="text-center text-white">$ <span id="deposit-total">00</span> </p>
+                </div>
+                <div class="bg-gray-700 w-72 rounded-lg p-12">
+                    <h1 class="text-xl text-white text-center">withdraw Amount</h1>
+                    <p class="text-center text-white">$ <span id="deposit-total">00</span> </p>
+                </div>
+                <div class="bg-gray-400 w-72 rounded-lg p-12">
+                    <h1 class="text-xl text-white text-center">Total Balane</h1>
+                    <p class="text-center text-white">$ <span id="deposit-total">00</span> </p>
+                </div>
             </div>
-            <div class="mb-6">
-                <label class="block text-emerald-400 text-lg font-bold mb-2" for="password">
-                    Password
-                </label>
-                <input
-                    class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="password" type="password" placeholder="Enter your password" required>
-            </div>
-            <div class="flex items-center justify-between">
-                <button
-                    class="bg-emerald-400 hover:bg-emerald-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    type="submit" id="login-btn">
-                    Sign In
-                </button>
-            </div>
-        </section>
-        <!-- footer -->
-        <footer class="bg-gray-200 py-4">
-            <div class="container mx-auto flex items-center justify-center my-3">
-                <p class="text-gray-700">© 2023 My Website. All rights reserved.</p>
-            </div>
-        </footer>
+            </section>
+            <!-- deposit and withdraw input field -->
+            <section class="my-20">
+                <div class="grid grid-cols-2 gap-4 w-3/4 mx-auto">
+                    <div class="bg-gray-400 p-8 rounded-lg">
+                        <h3 class="text-3xl text-white mb-4">Your Deposit</h3>
+                        <input id="deposit-field" class="w-3/4 px-4 py-3 rounded block" type="text"
+                            placeholder="$ Amount  you want to deposit">
+                        <button id="btn-deposit"
+                            class="bg-emerald-400 px-6 py-2 text-white rounded-lg mt-4 font-medium hover:bg-emerald-600">Deposit</button>
+                    </div>
+                    <div class="bg-emerald-400 p-8 rounded-lg">
+                        <h3 class="text-3xl text-white mb-4">Your withdraw</h3>
+                        <input id="deposit-field" class="w-3/4 px-4 py-3 rounded block" type="text"
+                            placeholder="$ Amount you want to withdraw">
+                        <button id="btn-deposit"
+                            class="bg-gray-400 px-6 py-2 text-white rounded-lg mt-4 font-medium hover:bg-gray-600">withdraw</button>
+                    </div>
+                </div>
+            </section>
+            <!-- footer -->
+            <footer class="bg-gray-200 py-4">
+                <div class="container mx-auto flex items-center justify-center my-3">
+                    <p class="text-gray-700">© 2023 My Website. All rights reserved.</p>
+                </div>
+            </footer>
     </main>
     <script src="js/utilities.js"></script>
     <script src="js/deposit.js"></script>
