--- a/banking.html
+++ b/banking.html
@@ -24,8 +24,8 @@
         </section>
         <!-- deposit, withdraw and total balance count bar -->
         <sections>
-            <div class="grid grid-cols-3 gap-4 mx-auto w-3/4">
-                <div class="bg-emerald-400 w-72 rounded-lg p-12">
+            <div class="grid lg:grid-cols-3 md:grid-cols-1 sm:grid-cols-1 gap-4 mx-auto w-3/4">
+                <div class="bg-emerald-400 sm:w-8 lg:w-72 rounded-lg p-12">
                     <h1 class="text-xl text-white text-center">Deposit Amount</h1>
                     <p class="text-center text-white">$ <span id="deposit-total">00</span> </p>
                 </div>
@@ -41,7 +41,7 @@
             </section>
             <!-- deposit and withdraw input field -->
             <section class="my-20">
-                <div class="grid grid-cols-2 gap-4 w-3/4 mx-auto">
+                <div class="grid lg:grid-cols-2 md:grid-cols-1 sm:grid-cols-1 gap-4 w-3/4 mx-auto">
                     <div class="bg-gray-400 p-8 rounded-lg">
                         <h3 class="text-3xl text-white mb-4">Your Deposit</h3>
                         <input id="deposit-field" class="w-3/4 px-4 py-3 rounded block" type="text"
