deposit and total amount count complete

--- a/banking.html
+++ b/banking.html
@@ -27,15 +27,15 @@
             <div class="grid lg:grid-cols-3 md:grid-cols-1 sm:grid-cols-1 gap-4 mx-auto w-3/4">
                 <div class="bg-emerald-400 sm:w-8 lg:w-72 rounded-lg p-12">
                     <h1 class="text-xl text-white text-center">Deposit Amount</h1>
-                    <p class="text-center text-white">$ <span id="deposit-total">00</span> </p>
+                    <p class="text-center text-white">$<span id="deposit-total">00</span> </p>
                 </div>
                 <div class="bg-gray-700 w-72 rounded-lg p-12">
                     <h1 class="text-xl text-white text-center">withdraw Amount</h1>
-                    <p class="text-center text-white">$ <span id="deposit-total">00</span> </p>
+                    <p class="text-center text-white">$<span id="withdraw">00</span> </p>
                 </div>
                 <div class="bg-gray-400 w-72 rounded-lg p-12">
                     <h1 class="text-xl text-white text-center">Total Balane</h1>
-                    <p class="text-center text-white">$ <span id="deposit-total">00</span> </p>
+                    <p class="text-center text-white">$<span id="balance-total">1200</span> </p>
                 </div>
             </div>
             </section>
